# nvapi-rs

./: .envrc  .gitignore  .travis.yml  Cargo.toml  README.md  ci.nix  flake.nix  search-index.js
.github/workflows/: nvapi.yml
hi/: Cargo.toml
hi/src/: gpu.rs  lib.rs
implementors/i2c/: trait.Address.js  trait.BlockTransfer.js  trait.Master.js  trait.ReadWrite.js  trait.Smbus.js
implementors/nvapi/: trait.RawConversion.js
macros/: Cargo.toml
macros/src/: api.rs  inherit.rs  lib.rs  version.rs
macros/src/nvstruct/: align.rs  mod.rs
macros/src/util/: attrs.rs  derive.rs  mod.rs
macros/src/value/: mod.rs  nvbits.rs  nvenum.rs
nvapi/: BaseVoltage.t.html  Celsius.t.html  CelsiusShifted.t.html  ClockFrequencies.t.html  ClockRange.t.html  ConnectedIdsFlags.t.html  Cooler.t.html  CoolerController.t.html  CoolerType.t.html  DisplayId.t.html  Kilohertz2Delta.t.html  MicrovoltsDelta.t.html  MonitorConnectorType.t.html  PStateSettings.t.html  Percentage1000.t.html  PerfInfo.t.html  PowerInfoEntry.t.html  RawConversion.t.html  ThermalInfo.t.html  ThermalLimit.t.html  VfpEntry.t.html  VfpMaskType.t.html  VoltageDomain.t.html  VoltageEntry.t.html  enum.ClockDomain.html  enum.ClockEntry.html  enum.ClockFrequencyType.html  enum.ClockLockMode.html  enum.CoolerControl.html  enum.CoolerController.html  enum.CoolerPolicy.html  enum.CoolerTarget.html  enum.CoolerType.html  enum.Foundry.html  enum.MonitorConnectorType.html  enum.PState.html  enum.RamMaker.html  enum.RamType.html  enum.Status.html  enum.SystemType.html  (+64 more)
nvapi/clock/: ClockDomain.t.html  ClockLockEntry.t.html  ClockTable.t.html  PowerInfo.t.html  VfpCurve.t.html  VfpMask.t.html  VfpMaskIter.t.html  enum.ClockDomain.html  enum.ClockLockMode.html  enum.VfpMaskType.html  struct.ClockLockEntry.html  struct.ClockRange.html  struct.ClockTable.html  struct.PerfFlags.html  struct.PerfInfo.html  struct.PerfStatus.html  struct.PowerInfo.html  struct.PowerInfoEntry.html  struct.VfpCurve.html  struct.VfpEntry.html  struct.VfpMask.html  struct.VfpMaskIter.html  struct.VoltageEntry.html  struct.VoltageStatus.html  struct.VoltageTable.html
nvapi/gpu/: PerformanceDecreaseReason.t.html  SystemType.t.html  Utilizations.t.html  enum.ClockFrequencyType.html  enum.Foundry.html  enum.MonitorConnectorType.html  enum.RamMaker.html  enum.RamType.html  enum.SystemType.html  enum.Vendor.html  index.html  sidebar-items.js  struct.ConnectedIdsFlags.html  struct.DisplayId.html  struct.DisplayIdsFlags.html  struct.DriverModel.html  struct.MemoryInfo.html  struct.PciIdentifiers.html  struct.PerformanceDecreaseReason.html  struct.PhysicalGpu.html  type.ClockFrequencies.html  type.Utilizations.html
nvapi/i2c_impl/: I2c.t.html  struct.I2c.html
nvapi/info/: fn.driver_version.html  fn.error_message.html  fn.initialize.html  fn.interface_version.html  fn.unload.html  index.html  sidebar-items.js
nvapi/pstate/: ClockDomain.t.html  ClockEntry.t.html  PState.t.html  PStates.t.html  UtilizationDomain.t.html  VoltageDomain.t.html  enum.ClockEntry.html  enum.PState.html  enum.UtilizationDomain.html  enum.VoltageDomain.html  index.html  sidebar-items.js  struct.BaseVoltage.html  struct.Delta.html  struct.Kilohertz.html  struct.Microvolts.html  struct.PStateSettings.html  struct.PStates.html  struct.Percentage.html  type.ClockDomain.html  type.PState.html  type.VoltageDomain.html
nvapi/thermal/: CoolerPolicyLevel.t.html  CoolerPolicyTable.t.html  Sensor.t.html  enum.CoolerControl.html  enum.CoolerController.html  enum.CoolerPolicy.html  enum.CoolerTarget.html  enum.CoolerType.html  enum.ThermalController.html  enum.ThermalTarget.html  struct.Cooler.html  struct.CoolerLevel.html  struct.CoolerPolicyLevel.html  struct.CoolerPolicyTable.html  struct.Sensor.html  struct.ThermalInfo.html  struct.ThermalLimit.html
nvapi/types/: Delta.t.html  Kilohertz2.t.html  struct.Celsius.html  struct.CelsiusShifted.html  struct.Delta.html  struct.Kibibytes.html  struct.Kilohertz.html  struct.Kilohertz2.html  struct.Kilohertz2Delta.html  struct.KilohertzDelta.html  struct.Microvolts.html  struct.MicrovoltsDelta.html  struct.Percentage.html  struct.Percentage1000.html  struct.Range.html  trait.RawConversion.html
nvapi_hi/: CoolerLevel.t.html  CoolerStatus.t.html  DriverModel.t.html  Foundry.t.html  GpuInfo.t.html  GpuSettings.t.html  GpuStatus.t.html  Kilohertz.t.html  Microvolts.t.html  PStateLimit.t.html  PciIdentifiers.t.html  Percentage.t.html  PhysicalGpu.t.html  PowerLimit.t.html  RamMaker.t.html  VfPoint.t.html  VfpDeltas.t.html  VoltageStatus.t.html  allowable_result.v.html  allowable_result_fallback.v.html  driver_version.v.html  enum.ClockDomain.html  enum.ClockLockMode.html  enum.CoolerControl.html  enum.CoolerController.html  enum.CoolerPolicy.html  enum.CoolerTarget.html  enum.CoolerType.html  enum.Foundry.html  enum.PState.html  enum.RamMaker.html  enum.RamType.html  enum.Status.html  enum.SystemType.html  enum.ThermalController.html  enum.ThermalTarget.html  enum.UtilizationDomain.html  enum.Vendor.html  enum.VoltageDomain.html  fn.allowable_result.html  (+47 more)
nvapi_hi/gpu/: CoolerDesc.t.html  CoolerTarget.t.html  Gpu.t.html  Kibibytes.t.html  KilohertzDelta.t.html  OvervoltLimit.t.html  PerfStatus.t.html  SensorDesc.t.html  SensorLimit.t.html  Vendor.t.html  VfpPoint.t.html  VfpRange.t.html  VfpTable.t.html  VoltageTable.t.html  enum.ClockDomain.html  enum.ClockLockMode.html  (+51 more)
nvapi_sys/: fn.status_result.html  index.html  sidebar-items.js  status_result.v.html  struct.ArgumentRangeError.html  struct.Array.html  type.Result.html
src/: clock.rs  ecc.rs  error.rs  gpu.rs  gsync.rs  i2c_impl.rs  info.rs  lib.rs  macros.rs  pstate.rs  thermal.rs  types.rs
sys/: Cargo.toml
sys/src/: apifn.rs  array.rs  boolu32.rs  clock_mask.rs  debug_array.rs  dispcontrol.rs  driverapi.rs  dx.rs  gsync.rs  handles.rs  i2c.rs  lib.rs  macros.rs  nvapi.rs  nvid.rs  status.rs  string.rs  sysgeneral.rs  tagged.rs  types.rs  value.rs  version.rs  vidio.rs
sys/src/gpu/: clock.rs  cooler.rs  display.rs  ecc.rs  mod.rs  power.rs  pstate.rs  thermal.rs
tests/: api_calls_return.rs
(+2399 files in other folders)
