[package]
name = "nvapi"
version = "0.2.0"
authors = ["arcnmx"]
edition = "2021"

description = "NVIDIA NVAPI bindings"
keywords = ["nvidia", "nvapi", "gtx"]

documentation = "https://docs.rs/nvapi/"
repository = "https://github.com/arcnmx/nvapi-rs"
readme = "README.md"
license = "MIT"

include = [
	"/src/**/*.rs",
	"/tests/**/*.rs",
	"/README*",
	"/COPYING*",
]

[dependencies]
nvapi-sys = { version = "0.2", path = "sys", default-features = false }
serde = { version = "1", features = ["derive"], optional = true }
i2c = { version = "0.1", optional = true }
log = "0.4"

[features]
default = ["serde"]
serde = ["dep:serde", "nvapi-sys/serde"]

[workspace]
members = ["sys", "hi"]
