[package]
name = "nvapi"
version = "0.1.4" # keep in sync with html_root_url
authors = ["arcnmx"]

description = "NVIDIA NVAPI bindings"
keywords = ["nvidia", "nvapi", "gtx"]

documentation = "https://docs.rs/nvapi/"
repository = "https://github.com/arcnmx/nvapi-rs"
readme = "README.md"
license = "MIT"

include = [
	"/src/**/*.rs",
	"/tests/**/*.rs",
	"/README*",
	"/COPYING*",
]

[dependencies]
nvapi-sys = { version = "^0.1.3", path = "sys", default-features = false }
serde = { version = "^1.0.0", optional = true }
serde_derive = { version = "^1.0.0", optional = true }
i2c = { version = "^0.1.0", optional = true }
void = "^1.0.2"
log = "^0.4.1"

[features]
serde_types = ["serde", "serde_derive", "nvapi-sys/serde_types"]
default = ["serde_types"]

[workspace]
members = ["sys", "hi"]
