[package]
name = "nvapi-hi"
version = "0.1.0" # keep in sync with html_root_url
authors = ["arcnmx"]

description = "NVIDIA NVAPI high level bindings"
keywords = ["nvidia", "nvapi", "gtx"]

documentation = "https://docs.rs/nvapi-hi/latest/nvapi_hi/"
repository = "https://github.com/arcnmx/nvapi-rs"
readme = "../README.md"
license = "MIT"

include = [
	"/src/**/*.rs",
	"/README*",
	"/COPYING*",
]

[dependencies]
nvapi = { version = "^0.1.0", path = "../", default-features = false }
serde = { version = "^1.0.0", optional = true }
serde_derive = { version = "^1.0.0", optional = true }

[features]
serde_types = ["serde", "serde_derive", "nvapi/serde_types"]
default = ["serde_types"]
