[package]
name = "nvapi-hi"
version = "0.2.0" # keep in sync with html_root_url
authors = ["arcnmx"]
edition = "2021"

description = "NVIDIA NVAPI high level bindings"
keywords = ["nvidia", "nvapi", "gtx"]

documentation = "https://docs.rs/nvapi-hi/latest/nvapi_hi/"
repository = "https://github.com/arcnmx/nvapi-rs"
readme = "../README.md"
license = "MIT"

include = [
	"/src/**/*.rs",
	"/README*",
	"/COPYING*",
]

[dependencies]
nvapi = { version = "^0.2.0", path = "../", default-features = false }
serde = { version = "^1.0.0", features = ["derive"], optional = true }
log = { version = "0.4", optional = true }
once_cell = "^1.12.0"

[features]
serde = ["dep:serde", "nvapi/serde"]
log = ["dep:log", "nvapi/log"]
log-kv = ["log?/kv_unstable", "nvapi/log-kv"]
default = []
