[package]
name = "nvapi-sys"
version = "0.2.0" # keep in sync with html_root_url
authors = ["arcnmx"]
edition = "2021"

description = "NVIDIA NVAPI FFI bindings"
keywords = ["nvidia", "nvapi", "gtx"]

documentation = "https://docs.rs/nvapi-sys/latest/nvapi_sys/"
repository = "https://github.com/arcnmx/nvapi-rs"
readme = "../README.md"
license = "MIT"

[target.'cfg(windows)'.dependencies]
winapi = { version = "^0.3.4", features = ["libloaderapi", "unknwnbase"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.139"

[dependencies]
bitflags = "^1.0.1"
serde = { version = "^1.0.0", features = ["derive"], optional = true }

[features]
serde_types = ["serde"]
default = ["serde_types"]
