[package]
name = "nvapi-sys"
version = "0.1.3" # keep in sync with html_root_url
authors = ["arcnmx"]

description = "NVIDIA NVAPI FFI bindings"
keywords = ["nvidia", "nvapi", "gtx"]

documentation = "https://docs.rs/nvapi-sys/"
repository = "https://github.com/arcnmx/nvapi-rs"
readme = "../README.md"
license = "MIT"

include = [
	"/src/**/*.rs",
	"/README*",
	"/COPYING*",
]

[target.'cfg(windows)'.dependencies]
winapi = { version = "^0.3.4", features = ["libloaderapi", "unknwnbase"] }

[dependencies]
bitflags = "^1.0.1"
serde = { version = "^1.0.0", optional = true }
serde_derive = { version = "^1.0.0", optional = true }

[features]
serde_types = ["serde", "serde_derive"]
default = ["serde_types"]
