[package]
name = "nvapi-sys"
version = "0.2.0"
authors = ["arcnmx"]
edition = "2021"

description = "NVIDIA NVAPI FFI bindings"
keywords = ["nvidia", "nvapi", "gtx"]

documentation = "https://docs.rs/nvapi-sys/"
repository = "https://github.com/arcnmx/nvapi-rs"
readme = "../README.md"
license = "MIT"

include = [
	"/src/**/*.rs",
	"/README*",
	"/COPYING*",
]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["libloaderapi", "unknwnbase"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dependencies]
bitflags = "1"
serde = { version = "1", features = ["derive"], optional = true }
zerocopy = "0.6"
log = { version = "0.4", optional = true }
nvapi-macros = { version = "0.1", path = "../macros" }

[features]
default = ["serde"]
serde = ["dep:serde"]
log = ["dep:log"]
log-kv = ["log?/kv_unstable", "log?/kv_unstable_std"]
